--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :exchange_rate %>
   </div>
   <div class="field">
-    <%= f.label :base_balance %><br>
-    <%= f.text_field :base_balance %>
+    <%= f.label :base_cash_in %><br>
+    <%= f.text_field :base_cash_in %>
   </div>
   <div class="actions">
     <%= f.submit %>
