--- a/app/views/transactions/new_public.html.erb
+++ b/app/views/transactions/new_public.html.erb
@@ -14,6 +14,10 @@
       </ul>
     </div>
   <% end %>
+
+
+  <%= f.hidden_field :transaction_type_id, :value => "0" %>
+  
   <div class="field">
     <%= f.label :seller_id %><br>
     <%= f.select :seller_id, User.order("name").collect {|u| [u.name, u.id]} %>
