output portfolio after transaction

--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Base balance:</strong>
-  <%= @setting.base_balance %>
+  <strong>Base Cash In:</strong>
+  <%= @setting.base_cash_in %>
 </p>
 
 <%= link_to 'Edit', edit_setting_path(@setting) %> |
