--- a/app/views/users/show_public.html.erb
+++ b/app/views/users/show_public.html.erb
@@ -1,21 +1,3 @@
 <p id="notice"><%= params[:notice] %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<p>
-  <strong>Balance:</strong>
-  <%= @user.balance %>
-</p>
-
-<p>
-  <strong>Role:</strong>
-  <%= @user.role %>
-</p>
-
-<p>
-  <strong>Status:</strong>
-  <%= @user.status %>
-</p>
+<%= render :partial => 'portfolio', :locals => {:user => @user} %>
