safe transaction forms

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :utopist %><br>
-    <%= f.text_field :utopist %>
+    <%= f.label :utopist_name %><br>
+    <%= f.text_field :utopist_name %>
   </div>
   <div class="field">
     <%= f.label :active %><br>
