--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= stock.name %></td>
         <td><%= stock.symbol %></td>
         <td><%= stock.description %></td>
-        <td><%= stock.utopist %></td>
+        <td><%= stock.utopist_name %></td>
         <td><%= stock.active %></td>
         <td><%= link_to 'Show', stock %></td>
         <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
