--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,7 @@
   <%= @user.status %>
 </p>
 
+<%= render :partial => 'portfolio', :locals => {:user => @user} %>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
