--- a/app/views/users/_portfolio.html.erb
+++ b/app/views/users/_portfolio.html.erb
@@ -1,3 +1,4 @@
+<div class="portfolio">
 <p>
   <strong>Name:</strong>
   <%= user.name %>
@@ -9,8 +10,6 @@
 </p>
 
 <p>
-  <strong>Portfolio:</strong>
-
   <table>
       <tr>
           <th>Tickersymbol</th>
@@ -32,4 +31,4 @@
     </table>
 
 </p>
-
+</div>
