--- a/app/views/users/show_public.html.erb
+++ b/app/views/users/show_public.html.erb
@@ -1,3 +1,3 @@
-<p id="notice"><%= params[:notice] %></p>
+<!--p id="notice"><%= params[:notice] %></p-->
 
 <%= render :partial => 'portfolio', :locals => {:user => @user} %>
