--- a/app/views/stocks/_chart.html.erb
+++ b/app/views/stocks/_chart.html.erb
@@ -5,7 +5,7 @@
         <th>amount</th>
         <th>price</th>
     </tr>
-<% stock.transactions.each do |t| %>
+<% stock.chart.each do |t| %>
     <tr>
         <td><%= t.created_at %></td>
         <td><%= t.amount %></td>
