--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -1,5 +1,7 @@
 <h2>USX</h2>
 
-<div id="chartContainer" style="height: 300px; width: 100%;">
+<div id="chart-usx" style="height: 300px; width: 100%;">
 </div>
 
+<div id="chart-aaa" style="height: 300px; width: 100%;">
+</div>
