auto reload projection

--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -1,5 +1,9 @@
 <h2>USX</h2>
 
+<script type="text/javascript">
+	timerID = setTimeout ( "$('body').load('/display/projection')", 10000 );
+</script>
+
 <div id="chart-usx" style="height: 300px; width: 100%;">
 </div>
 
