--- a/app/views/layouts/local.html.erb
+++ b/app/views/layouts/local.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>UTOPIA STOCK EXCHANGE</title>
-  <%= stylesheet_link_tag    "local", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "local", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "local", media: "all" %>
+  <%= javascript_include_tag "local" %>
   <%= favicon_link_tag '/assets/favicon.png' %>
   <%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
