--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
-<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content">Bringen auch Sie Ihre Utopie an die Börse >> <span class="formlink">klicken Sie hier!</span> >>&nbsp;</div></div>
+<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content" data-step="1" data-name="top-scroller1">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
+<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content" data-step="3" data-name="top-scroller2">Bringen auch Sie Ihre Utopie an die Börse >> <span class="formlink">klicken Sie hier!</span> >>&nbsp;</div></div>
 
 <div id="icon-1" class="icon"></div>
 <div id="icon-2" class="icon"></div>
