--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -1,5 +1,5 @@
-<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
-<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content">
+<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content" data-step="1">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
+<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content" data-step="3">
 	
 	<% @stocks.each do |stock|%>
 		<span class="utopialink" rel="<%= stock.id %>"><%= stock.name %></span>
