--- a/app/assets/stylesheets/application_new.css.erb
+++ b/app/assets/stylesheets/application_new.css.erb
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require onepage-scroll.css
+ *= require scroller.css
  */
 
 body {
@@ -58,16 +59,6 @@ a {
 
 .scroll-container {
 	position: fixed;
-	white-space: nowrap;
-	z-index: 50;
-	overflow: hidden;
-	width: 100%;
-}
-
-.scroll-content {
-	position: absolute;
-	top: 0px;
-	z-index: 100;
 }
 
 #scroll-container-1 {
