--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -1,9 +1,66 @@
-<h2>USX</h2>
+<div id="projection">
 
-<div id="chart-usx" style="height: 500px; width: 100%;">
-</div>
+	<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content" data-step="1">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
+	<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content" data-step="3">
+		
+		<% @stocks.each do |stock|%>
+			<%= stock.name %>
+			(<span class="symbol"><%= stock.symbol %></span>)
+		<% end %>
 
-<% Stock.where("active=true").each do |s| %>
-<div class="chart" id="chart-<%= s.symbol %>" data-symbol="<%= s.symbol %>" data-id="<%= s.id %>" data-title="<%= s.symbol %>" style="height: 300px; width: 100%;">
+	</div></div>
+
+	<div id="scroll-container-3" class="scroll-container"><div id="scroll-content-3" class="scroll-content" data-step="5">
+		
+		<% @stocks.each do |stock|%>
+			<span class="symbol"><%= stock.symbol %></span>
+			<span class="price u"><%= stock.price.to_i > 0 ? stock.price.to_i : "-" %></span>
+		<% end %>
+
+	</div></div>
+
+	<div id="page1" class="page">
+
+		<div class="tile tile1">
+			<div id="chart-usx">
+			</div>
+		</div>
+
+		<div class="tile tile2">
+		</div>
+
+		<div class="tile tile3">
+			<% @stocks.each do |stock|%>
+				<div class="stock-mini-tile">
+					<div class="stock-mini">
+						<h5 class="symbol"><%= stock.symbol %></h5>
+						<div class="price u" data-stock-symbol="<%= stock.symbol %>" data-stock-attr="price"><%= stock.price.to_i > 0 ? stock.price.to_i : "-" %></div>
+						<div class="percentage">+10 %</div>
+						<div class="indicator">
+							<abbr class="indicator-neutral">■</abbr>
+							<abbr class="indicator-up">▲</abbr>
+							<abbr class="indicator-down">▼</abbr>
+						</div>
+					</div>
+				</div>
+			<% end %>
+		</div>
+
+		<div class="tile tile4 top_users">
+			<h4>Top Trader</h4>
+			<dl>
+			<% @top_users.each do |user|%>
+				<dt><%= user.name %></dt>
+				<dd><%= user.balance %></dd>
+			<% end %>	
+			</dl>		
+		</div>		
+
+		<% Stock.where("active=true").each do |s| %>
+		<div style="display:none" class="chart" id="chart-<%= s.symbol %>" data-symbol="<%= s.symbol %>" data-id="<%= s.id %>" data-title="<%= s.symbol %>" style="height: 300px; width: 100%;">
+		</div>
+		<% end %>
+
+	</div>
+
 </div>
-<% end %>
