--- a/app/views/users/_portfolio.html.erb
+++ b/app/views/users/_portfolio.html.erb
@@ -1,25 +1,33 @@
 <div class="portfolio">
 <% portfolio = user.portfolio %>
 <% balance = user.balance %>
+<% ranks = user.ranks %>
 
 <p>
   <strong>Name:</strong>
   <%= user.name %>
 </p>
 
+<h1>Ihr Konto</h1>
+
 <p>
-    <strong>Gesamt-Einsatz:</strong>
-    <%= portfolio[:cash_in] %>
+    <strong>Grundeinsatz:</strong>
+    <%= portfolio[:cash_in] %>U (Rang <%= ranks[:cash_in][:rank] %>)
 </p>
 
 <p>
-  <strong>Aktueller Kontostand:</strong>
-  <%= balance %>
+  <strong>aktueller Kontostand:</strong>
+  <%= balance %>U (Rang <%= ranks[:balance][:rank] %>)
 </p>
 
 <p>
-  <strong>Realer Gesamtgewinn bisher:</strong>
-  <%= portfolio[:total_profit] %> (<%= rel_percent portfolio[:cash_in], balance %>)
+  <strong>Gesamtgewinn/-Verlust absolut:</strong>
+  <%= portfolio[:total_profit] %>U (Rang <%= ranks[:profit_abs][:rank] %>)
+</p>
+
+<p>
+  <strong>Gesamtgewinn/-Verlust relativ:</strong>
+  <%= portfolio[:total_profit_rel] %>% (Rang <%= ranks[:profit_rel][:rank] %>)
 </p>
 
 <p>
@@ -28,32 +36,32 @@
           <th>Tickersymbol</th>
           <th>Titel</th>
           <th>Anzahl</th>
-          <th>aktuell investiert</th>
-          <th>Durchschnittskurs Ankauf</th>
-          <th>Aktueller Kurs</th>
-          <th>Aktueller Gesamtwert</th>
-          <th>möglicher Gewinn jetzt</th>
-          <th>realer Gewinn bisher</th>
+          <th>Einstiegskurs</th>
+          <th>Investment</th>
+          <th>aktueller Kurs</th>
+          <th>aktueller Wert</th>
+          <th>möglicher Gewinn/Verlust jetzt</th>
+          <th>realer Gewinn/Verlust bisher</th>
       </tr>
      
-      <h1>Utopie-Aktien:</h1>
+      <h1>Ihre Utopie-Aktien</h1>
   <% portfolio[:stocks].each do |stock_id, stock_data| %>
         
   <tr>
       <td><%= stock_data[:stock].symbol %></td>
       <td><%= stock_data[:stock].name %></td>
       <td><%= stock_data[:amount] %></td>
-      <td><%= stock_data[:investment] %></td>
+      <td><%= stock_data[:investment] %>U</td>
       <td><% if stock_data[:amount] == 0 %>
               <%= 0 %>
           <% else %>
-                <%= stock_data[:avg_price] %>
+                <%= stock_data[:avg_price] %>U
             <% end %>
       </td>
-      <td><%= stock_data[:stock].current_price %></td>
-      <td><%= stock_data[:value] %> (<%= rel_percent stock_data[:investment], stock_data[:value] %>)</td>
-      <td><%= stock_data[:value] - stock_data[:investment] %></td>
-      <td><%= stock_data[:profit] %></td>
+      <td><%= stock_data[:stock].current_price %>U</td>
+      <td><%= stock_data[:value] %>U</td>
+      <td><%= stock_data[:value] - stock_data[:investment] %>U (<%= rel_percent stock_data[:investment], stock_data[:value] %>)</td>
+      <td><%= stock_data[:profit] %>U</td>
   </tr>
 
 
@@ -64,14 +72,23 @@
 </p>
 
 <p>
-  <strong>Aktuell investiert:</strong>
-  <%= portfolio[:total_investment] %>
+  <strong>Investment absolut:</strong>
+  <%= portfolio[:total_investment] %>U (Rang <%= ranks[:investment_abs][:rank] %>)
 </p>
 
 <p>
-  <strong>Aktueller Portfoliowert:</strong>
-  <%= portfolio[:total_value]%> (<%= rel_percent portfolio[:total_investment], portfolio[:total_value] %>)
+  <strong>Anteil des Grundeinsatzes investiert:</strong>
+  <%= portfolio[:total_investment_rel] %>% (Rang <%= ranks[:investment_rel][:rank] %>)
 </p>
 
+<p>
+  <strong>aktueller Portfoliowert:</strong>
+  <%= portfolio[:total_value]%>U (Rang <%= ranks[:value_abs][:rank] %>)
+</p>
+
+<p>
+  <strong>Entwicklung des Investments:</strong>
+  <%= portfolio[:total_value_rel]%>% (Rang <%= ranks[:value_rel][:rank] %>)
+</p>
 
 </div>
