roll stock charts in projection

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -166,6 +166,7 @@ span.scroll-highlight {
 
 #projection .page .tile {
 	float:left;
+	overflow: hidden;
 }
 
 #projection .page .tile1 { 
@@ -174,6 +175,7 @@ span.scroll-highlight {
 }
 #projection .page .tile2 { 
 	width: 25%;
+	height:70%;
 }
 #projection .page .tile3 { 
 	width: 75%; 
@@ -184,6 +186,14 @@ span.scroll-highlight {
 
 #projection #page1 #chart-usx { 
 	height: 100%; 
+}
+
+#projection #page1 .roll .chart { 
+	height: 100%; 
+}
+
+#projection .page .chart {
+	width:100%;
 }
 
 .stock-mini-tile {
