--- a/app/views/users/ranks.html.erb
+++ b/app/views/users/ranks.html.erb
@@ -8,6 +8,7 @@
       <th>balance</th>
       <th>profit_abs</th>
       <th>profit_rel</th>
+      <th>num_stocks</th>
       <th>investment_abs</th>
       <th>investment_rel</th>
       <th>value_abs</th>
@@ -23,6 +24,7 @@
         <td><%= rank[1][:balance][:value] %> (<%= rank[1][:balance][:rank] %>)</td>
         <td><%= rank[1][:profit_abs][:value] %>U (<%= rank[1][:profit_abs][:rank] %>)</td>
         <td><%= rank[1][:profit_rel][:value] %>% (<%= rank[1][:profit_rel][:rank] %>)</td>
+        <td><%= rank[1][:num_stocks][:value] %>U (<%= rank[1][:num_stocks][:rank] %>)</td>
         <td><%= rank[1][:investment_abs][:value] %>U (<%= rank[1][:investment_abs][:rank] %>)</td>
         <td><%= rank[1][:investment_rel][:value] %>% (<%= rank[1][:investment_rel][:rank] %>)</td>
         <td><%= rank[1][:value_abs][:value]%>U (<%= rank[1][:value_abs][:rank] %>)</td>
