--- a/app/views/transactions/new_public_utopist.html.erb
+++ b/app/views/transactions/new_public_utopist.html.erb
@@ -27,8 +27,8 @@
   </p>
 
   <p>
-    <%= f.number_field :amount, value: 0, :autocomplete => :off %>
-    ANTEILE SEINER/IHRER UTOPIE ZUM PREIS VON JE <%= f.number_field :price, value: 0, :autocomplete => :off %>
+    <%= f.number_field :amount, :autocomplete => :off %>
+    ANTEILE SEINER/IHRER UTOPIE ZUM PREIS VON JE <%= f.number_field :price, :autocomplete => :off %>
   </p>
   
   <p>DAS MACHT INSGESAMT: <span class="total">0</span></p>
