load stock and user ranking, format numbers

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -107,9 +107,9 @@ span.scroll-highlight {
 	left: 0px;
 }
 
-#scroll-content-2 span.symbol {
+#scroll-content-2 span.symbol, #scroll-content-3 span.symbol {
 	text-transform:uppercase;
-	margin-right: 20px;
+	margin-left: 20px;
 }
 
 #scroll-container-3 {
@@ -130,7 +130,7 @@ span.scroll-highlight {
 /**** GENERAL ****/
 
 .u:after {
-	content: " U";
+	content: "U";
 }
 
 .indicator-neutral {
@@ -209,6 +209,10 @@ span.scroll-highlight {
 .stock-mini h5 {
 }
 
+.top_stocks h4 {
+	font-family: 'Arial Black';
+	text-transform: uppercase;	
+}
 
 .top_users h4 {
 	font-family: 'Arial Black';
@@ -223,12 +227,12 @@ span.scroll-highlight {
 }
 
 .top_users dt {
-	width:80%;
+	width:70%;
 	clear:left;
 }
 
 .top_users dd {
-	width:20%;
+	width:30%;
 }
 
 
