--- a/app/views/stocks/ranking.html.erb
+++ b/app/views/stocks/ranking.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= value[:stock].symbol %></td>
         <td><%= value[:stock].name %></td>
-        <td><%= value[:stock].current_price %></td>
+        <td><%= value[:stock].price %></td>
         <td><%= value[:value] %> (Rang <%= value[:rank] %>)</td>
       </tr>
     <% end %>
