show names in gallery

--- a/app/views/stocks/_show_gallery.html.erb
+++ b/app/views/stocks/_show_gallery.html.erb
@@ -10,7 +10,7 @@
 					</div>
 					<div class="utopist">
 						<img src="/assets/portraits/utopist_<%= @stock.symbol %>.jpg"><br>
-						<label class="utopist-name">Eine Utopie von <%= @stock.utopist %></label>
+						<label class="utopist-name">Eine Utopie von <%= @stock.utopist_name %></label>
 					</div>
 
 </div>
