basic form styling and more security

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -239,6 +239,20 @@ span.scroll-highlight {
 
 /**** HANDELSINTERFACE ****/
 
+.transaction_form {
+	margin: 20px;
+	font-size: 200%;
+}
+
+
+.transaction_form form select, .transaction_form form input {
+	font-size: 100%;
+	margin: 20px;
+	padding: 5px;
+}
+
+/**** PRINT ****/
+
 .portfolio {
 	page-break-after:always;
 }
@@ -246,3 +260,4 @@ span.scroll-highlight {
 .portfolio:last-child {
 	page-break-after:avoid;
 }
+
