--- a/app/views/transactions/_menu.html.erb
+++ b/app/views/transactions/_menu.html.erb
@@ -1,2 +1,4 @@
 <%= link_to "Utopist transaction", url_for(controller: 'transactions', action: 'new_public_utopist') %>
 <%= link_to "Player transaction", url_for(controller: 'transactions', action: 'new_public') %>
+<%= link_to "Add cash", url_for(controller: 'transactions', action: 'add_cash_public') %>
+<%= link_to "Add user", url_for(controller: 'users', action: 'new_public') %>
