--- a/app/views/users/new_public.html.erb
+++ b/app/views/users/new_public.html.erb
@@ -1,3 +1,7 @@
+<%= render partial: 'transactions/menu' %>
+
+<div class="transaction_form">
+
 <p id="notice"><%= params[:notice] %></p>
 
 <h1>New user</h1>
@@ -23,3 +27,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+</div>
