stock base price when buying from utopists

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :utopist_name %>
   </div>
   <div class="field">
+    <%= f.label :base_price %><br>
+    <%= f.text_field :base_price %>
+  </div>
+  <div class="field">
     <%= f.label :active %><br>
     <%= f.check_box :active %>
   </div>
