--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -14,7 +14,11 @@
 		
 		<% @stocks.each do |stock|%>
 			<span class="symbol"><%= stock.symbol %></span>
-			<span class="price u"><%= stock.price.to_i > 0 ? stock.price.to_i : "-" %></span>
+			<% if stock.price.to_i > 0 %>
+				<span class="price u"><%=  stock.price.to_i %></span>
+			<% else %>
+				<span class="price">-</span>
+			<% end %>
 		<% end %>
 
 	</div></div>
